# rockgarden

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  package-lock.json  package.json  pyproject.toml  rockgarden.toml  tailwind.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-version.yml  claude-code-review.yml  claude.yml  docs.yml  lint.yml  tag-release.yml  tests.yml
docs/: Architecture.md  Build Hooks.md  Configuration.md  Customization.md  Deployment.md  Getting Started.md  Markdown Support.md  Vision.md  architecture.md  future.md  implementation.md  index.md  markdown-support.md  roadmap.md  rockgarden.toml  vision.md
docs/features/: 03-wiki-links.md  05-callouts.md  06-navigation.md  07-backlinks.md  08-search.md  10-progressive-customization.md  11-rss-feed.md  12-base-path-prefix.md  14-collections.md  15-build-hooks.md  README.md
docs/milestones/: 01-home-page.md  06-navigation.md  README.md
plans/: README.md  concepts.md  future.md  gfm-footnotes.md  gfm-syntax-highlighting.md  ideas.md  implementation.md  issues.md  llms-full-txt.md  nits.md  roadmap.md  rockgarden-mcp.md  tier-1-2-plan.md  todos.md
plans/features/: 01-home-page.md  02-all-pages.md  03-wiki-links.md  04-embeds.md  05-callouts.md  09-macros.md  10-progressive-customization.md  11-rss-feed.md  12-base-path-prefix.md  13-polish.md  14-collections.md  15-build-hooks.md  16-static-assets.md  17-seo-meta.md  18-accessibility.md  N11-config-validation.md  N8-tag-index-pages.md  README.md  demo-site.md  graph-view.md  markdown-support.md  mermaid.md  og-images.md  plugins.md
scripts/: update_lucide_icons.py
site/: Configuration.md  Future.md  Getting Started.md  Navigation.md  index.md  rockgarden.toml
site/examples/: index.md
site/examples/markdown/: formatting.md  images.md  index.md  linking.md
site/examples/obsidian/: embeds.md  formatting.md  index.md  linking.md
site/guides/: quick-start.md
src/rockgarden/: __init__.py  assets.py  cli.py  config.py  hooks.py  links.py  macros.py  theme.py  urls.py  validation.py
src/rockgarden/content/: __init__.py  collection.py  format_loader.py  link_index.py  loader.py  models.py  models_loader.py  store.py  strip_title.py
src/rockgarden/icons/: __init__.py  inline.py  lucide.py  resolver.py
src/rockgarden/nav/: __init__.py  breadcrumbs.py  folder_index.py  labels.py  sort.py  toc.py  tree.py
src/rockgarden/obsidian/: __init__.py  callouts.py  comments.py  embeds.py  highlights.py  inline_tags.py  transclusions.py  wikilinks.py
src/rockgarden/output/: __init__.py  build_info.py  builder.py  feed.py  html_to_md.py  llms_txt.py  manifest.py  search.py  sitemap.py  tags.py
src/rockgarden/render/: __init__.py  engine.py  markdown.py
src/rockgarden/server/: __init__.py  _live_reload.js  dev.py  handler.py  watcher.py
src/rockgarden/static/: highlight.css  rockgarden.css
src/rockgarden/templates/: 404.html  base.html  folder_index.html  page.html  tag_index.html  tags_root.html
src/rockgarden/templates/components/: backlinks.html  breadcrumbs.html  footer.html  meta.html  nav.html  page_list_item.html  search.html  theme_toggle.html  toc.html
src/rockgarden/templates/layouts/: default.html
static-src/: input.css
tests/: test_assets.py  test_backlinks.py  test_breadcrumbs.py  test_broken_links.py  test_callouts.py  test_cdn_detection.py  test_cli.py  test_collection_pages.py  test_collections.py  test_comments.py  test_content_store.py  test_dev_handler.py  test_dev_server.py  test_embeds.py  test_feed.py  test_folder_index.py  test_footnotes.py  test_format_loader.py  test_highlights.py  test_hooks.py  test_html_to_md.py  test_icons.py  test_incremental.py  test_inline_icons.py  test_inline_tags.py  test_links.py  test_llms_txt.py  test_loader.py  test_macros.py  test_manifest.py  test_math.py  test_models_loader.py  test_nav_tree.py  test_search_config.py  test_sitemap.py  test_sort.py  test_strip_title.py  test_syntax_highlight.py  test_tasklists.py  test_template_icon.py  (+8 more)
