[project]
name = "rockgarden"
version = "0.7.2"
description = "Static site generator for Markdown content with Obsidian support"
readme = "README.md"
authors = [
    { name = "Dave Forgac", email = "tylerdave@tylerdave.com" }
]
requires-python = ">=3.13"
license = "MIT"
keywords = ["obsidian", "static-site-generator", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "python-frontmatter>=1.0.0",
    "linkify-it-py>=2.0.3",
    "tzdata>=2024.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "markdownify>=0.14.1",
    "pygments>=2.17.0",
    "python-slugify>=8.0.0",
    "watchfiles>=1.0.0",
]

[project.urls]
Homepage = "https://rockgarden.build/"
Repository = "https://github.com/rockgarden-build/rockgarden"
Issues = "https://github.com/rockgarden-build/rockgarden/issues"
Changelog = "https://github.com/rockgarden-build/rockgarden/blob/main/CHANGELOG.md"

[project.scripts]
rockgarden = "rockgarden.cli:main"
rgdn = "rockgarden.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rockgarden"]

[dependency-groups]
dev = [
    "commitizen>=4.11.6",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:frontmatter"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.2"
version_files = [
    "pyproject.toml:^version",
    "src/rockgarden/__init__.py:^__version__",
]
tag_format = "v$version"
bump_message = "bump: increment version $current_version -> $new_version"
major_version_zero = true
update_changelog_on_bump = true
changelog_incremental = true
change_type_order = [
    "Features",
    "Minor / Bug Fixes",
    "Refactoring",
    "Performance",
]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Minor / Bug Fixes"
refactor = "Refactoring"
perf = "Performance"
